kubernetes/apps/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-svc
spec:
  selector:
    app: spring-boot-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
