kubernetes/apps/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: app-2.workshop.zcloud.ws
      http:
        paths:
          - backend:
              service:
                name: spring-boot-app-svc
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app-2.workshop.zcloud.ws
      secretName: spring-boot-app-ingress-tls
